# magpie

./: .gitignore  CHANGELOG-generated.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  release.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  interop.yml  nightly.yml  weekly-soak.yml
ci/interop/: Dockerfile.magpie  README.md  docker-compose.qbittorrent-magnet.yml  docker-compose.qbittorrent.yml  docker-compose.transmission-magnet.yml  docker-compose.transmission.yml  gate_qbittorrent.sh  gate_qbittorrent_magnet.sh  gate_transmission.sh  gate_transmission_magnet.sh  run.sh
ci/interop/qbittorrent-config/qBittorrent/: qBittorrent.conf
ci/interop/transmission-config/: settings.json
ci/soak/: dhat.sh  multi-torrent.sh  run-24h.sh
crates/magpie-bt/: Cargo.toml  README.md
crates/magpie-bt-bencode/: Cargo.toml  README.md
crates/magpie-bt-bencode/benches/: BASELINE.md  decode.rs
crates/magpie-bt-bencode/fuzz/: .gitignore  Cargo.toml
crates/magpie-bt-bencode/fuzz/corpus/bencode/: seed-nested
crates/magpie-bt-bencode/fuzz/fuzz_targets/: bencode.rs
crates/magpie-bt-bencode/src/: decode.rs  encode.rs  error.rs  lib.rs  value.rs
crates/magpie-bt-bencode/tests/: proptest.rs
crates/magpie-bt-core/: Cargo.toml  README.md
crates/magpie-bt-core/benches/: BASELINE.md  alert_ring.rs  picker.rs
crates/magpie-bt-core/examples/: dhat_soak.rs
crates/magpie-bt-core/fuzz/: Cargo.toml
crates/magpie-bt-core/fuzz/corpus/alert_ring/: seed-basic
crates/magpie-bt-core/fuzz/fuzz_targets/: alert_ring.rs  udp_tracker.rs
crates/magpie-bt-core/src/: dht.rs  engine.rs  ids.rs  lib.rs  lsd.rs  metrics_exporter.rs  peer_filter.rs  peer_id.rs  picker.rs
crates/magpie-bt-core/src/alerts/: category.rs  mod.rs  queue.rs
crates/magpie-bt-core/src/session/: disk.rs  messages.rs  metadata_exchange.rs  mod.rs  peer.rs  peer_upload.rs  pex.rs  read_cache.rs  resume.rs  torrent.rs
crates/magpie-bt-core/src/session/choker/: leech.rs  mod.rs  seed.rs
crates/magpie-bt-core/src/session/shaper/: bucket.rs  mod.rs  refiller.rs
crates/magpie-bt-core/src/session/stats/: mod.rs  sink.rs
crates/magpie-bt-core/src/session/udp/: demux.rs  mod.rs
crates/magpie-bt-core/src/storage/: error.rs  file.rs  memory.rs  mod.rs  multi_file.rs  traits.rs
crates/magpie-bt-core/src/tracker/: compact.rs  error.rs  http.rs  mod.rs  tiered.rs  udp.rs
crates/magpie-bt-core/tests/: controlled_swarm.rs  dht_attach.rs  engine_e2e.rs  engine_g1.rs  engine_g2.rs  engine_g3.rs  engine_listener.rs  engine_seed.rs  extension_handshake.rs  metadata_exchange.rs  multi_file_download.rs  peer_id_layout.rs  pex_discovery.rs  picker_proptest.rs  picker_synthetic.rs  resume_roundtrip.rs  seeder_example_smoke.rs  session_duplex.rs  soak_multi_torrent.rs  stats_persist.rs  stats_persist_subprocess.rs  storage_roundtrip.rs  throughput_floor.rs
crates/magpie-bt-dht/: Cargo.toml  README.md
crates/magpie-bt-dht/src/: bootstrap.rs  bucket.rs  cache.rs  handlers.rs  krpc.rs  lib.rs  lookup.rs  node_id.rs  peer_store.rs  rate_limit.rs  routing_table.rs  runtime.rs  tokens.rs  transport.rs
crates/magpie-bt-dht/tests/: bootstrap_cold_start.rs  three_dht_swarm.rs
crates/magpie-bt-metainfo/: Cargo.toml  README.md
crates/magpie-bt-metainfo/benches/: BASELINE.md  parse.rs
crates/magpie-bt-metainfo/fuzz/: Cargo.toml
crates/magpie-bt-metainfo/fuzz/corpus/metainfo/: seed-v1-single  seed-v2
crates/magpie-bt-metainfo/fuzz/fuzz_targets/: metainfo.rs
crates/magpie-bt-metainfo/src/: error.rs  info_hash.rs  lib.rs  magnet.rs  parse.rs  test_support.rs  types.rs
crates/magpie-bt-metainfo/tests/: fixtures.rs  proptest.rs
crates/magpie-bt-metainfo/tests/common/: mod.rs
crates/magpie-bt-wire/: Cargo.toml  README.md
crates/magpie-bt-wire/fuzz/: Cargo.toml
crates/magpie-bt-wire/fuzz/fuzz_targets/: extension_handshake.rs  handshake_decode.rs  wire_decode.rs
crates/magpie-bt-wire/src/: block.rs  codec.rs  error.rs  extension.rs  handshake.rs  lib.rs  message.rs  metadata.rs  pex.rs
crates/magpie-bt-wire/tests/: proptest.rs
crates/magpie-bt/examples/: generate_fixture.rs  leech.rs  mock_tracker.rs  seeder.rs
crates/magpie-bt/src/: lib.rs
crates/magpie-bt/tests/: cucumber.rs  three_engine_swarm.rs
crates/magpie-bt/tests/features/: bep-0003-core.feature  bep-0006-fast.feature  bep-0009-metadata.feature  bep-0010-extension.feature  bep-0011-pex.feature  bep-0012-multi-tracker.feature  bep-0014-lsd.feature  bep-0015-udp-tracker.feature  bep-0023-compact.feature  bep-0027-private.feature
crates/magpie-bt/tests/steps/: bdd_extra.rs  mod.rs  tracker.rs  wire.rs
docs/: DISCIPLINES.md  MILESTONES.md  PROJECT.md  ROADMAP.md  RSS-budget.md  api-audit.md  bep-coverage.md  m2-gate-review.md
docs/adr/: 0001-subcrate-vs-feature-dht-utp.md  0002-event-bus-alert-ring.md  0002-event-bus-broadcast.md  0003-tokio-only.md  0004-storage-trait-shape.md  0005-picker-architecture.md  0007-disk-write-backpressure.md  0008-vectorised-file-io.md  0009-peer-state-machine.md  0010-request-pipelining.md  0011-tracker-http-rustls.md  0012-choker.md  0013-bandwidth-shaper.md  0014-stats.md  0015-udp-demux.md  0016-engine-abstraction.md  0017-upload-request-flow.md  0018-read-cache.md  0019-completion-transition.md  0020-peer-need-set.md  0021-multi-file-storage.md  0022-resume-state.md  0023-super-seeding.md  0024-dht-routing-table.md  0025-dht-bootstrap.md  0026-dht-tokens-and-rate-limits.md  0027-extension-registry.md  0028-metadata-exchange-flow.md  README.md
docs/archive/: librqbit-gap-analysis.md
docs/milestones/: 000-foundations.md  001-foundations.md  001-leecher-tcp-v1.md  002-seeder-multi-torrent.md  003-extension-magnet.md  004-dht.md  _template.md
docs/research/: 001-cratetorrent.md  002-anacrolix-torrent.md  003-libtorrent-rasterbar.md  004-librqbit.md  005-monotorrent.md  006-lambdaclass-libtorrent-rs.md  SUMMARY.md
