[package]
name = "magpie-bt-bencode"
description = "Zero-copy bencode codec for the magpie BitTorrent library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["bittorrent", "bencode", "codec"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "decode"
harness = false

[lints]
workspace = true
