[package]
name = "magpie-bt-dht"
description = "Mainline DHT (BEP 5) for the magpie BitTorrent library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["bittorrent", "dht", "kademlia"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
magpie-bt-bencode = { path = "../magpie-bt-bencode", version = "0.1.2" }
thiserror.workspace = true
sha1.workspace = true
getrandom.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tracing.workspace = true
futures-util = { workspace = true, features = ["std", "alloc"] }

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }

[lints]
workspace = true
